Catagories section is added.

--- a/index.html
+++ b/index.html
@@ -119,6 +119,85 @@
             </div>
         </div>
     </div>
+    <div class="categories">
+        <div class="container">
+            <ul class="category-list">
+                <li>
+                    <a href="">
+                        KADIN
+                    </a>
+                    <div>
+
+                    </div> 
+                </li>
+                <li>
+                    <a href="">
+                        ERKEK
+                    </a>
+                    <div>
+
+                    </div> 
+                </li>
+                <li>
+                    <a href="">
+                        ÇOCUK
+                    </a>
+                    <div>
+
+                    </div>
+                </li>
+                <li>
+                    <a href="">
+                        EV & YAŞAM
+                    </a>
+                    <div>
+
+                    </div>
+                </li>
+                <li>
+                    <a href="">
+                        SÜPERMARKET
+                    </a>
+                    <div>
+
+                    </div>
+                </li>
+                <li>
+                    <a href="">
+                        KOZMATİK
+                    </a>
+                    <div>
+
+                    </div>
+                </li>
+                <li>
+                    <a href="">
+                        AYAKKABI & ÇANTA
+                    </a>
+                    <div>
+
+                    </div>
+                </li>
+                <li>
+                    <a href="">
+                        SAAT & AKSESUAR
+                    </a>
+                    <div>
+
+                    </div>
+                </li>
+                <li>
+                    <a href="">
+                        ELEKTRONİK
+                    </a>
+                    <div>
+
+                    </div>
+                </li>
+            </ul>
+
+        </div>
+    </div>
     
 
 </body>
