--- a/products-page.html
+++ b/products-page.html
@@ -249,11 +249,10 @@
                         <li>
                             <a href="">Gömlek</a>
                         </li>
-                        <li>
-                            <a href="">DAHA FAZLA GÖSTER</a>
-                        </li>
+                        
                        
                     </ul>
+                    <a id="more-show-button" href="">DAHA FAZLA GÖSTER</a>
                 </div>
             </div>
             <div></div>
