Category dropdown is completed.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
                                         </li>
                                         <li class="profile-link-item">
                                             <a href="">
-                                                <i class="fas fa-user-alt"></i>
+                                                <svg width="14" height="14" viewBox="0 0 14 14" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M0.886963 1.50001V9.75C0.886963 10.563 1.47815 11.25 2.17776 11.25H3.89882V13.75C3.89882 13.8533 3.95347 13.946 4.03631 13.9832C4.06168 13.9947 4.08794 14 4.11397 14C4.17333 14 4.23142 13.9715 4.27317 13.9182L6.36039 11.25H12.5042C13.2038 11.25 13.795 10.563 13.795 9.74998V1.5C13.795 0.686996 13.2038 0 12.5042 0H2.17779C1.47817 0 0.886988 0.686996 0.886988 1.5L0.886963 1.50001ZM9.49229 5.50001C9.49229 4.94851 9.87826 4.50001 10.3528 4.50001C10.8274 4.50001 11.2134 4.94853 11.2134 5.50001C11.2134 6.05151 10.8274 6.50001 10.3528 6.50001C9.87826 6.50001 9.49229 6.05149 9.49229 5.50001ZM6.48042 5.50001C6.48042 4.94851 6.86636 4.50001 7.34096 4.50001C7.81555 4.50001 8.20149 4.94853 8.20149 5.50001C8.20149 6.05151 7.81553 6.50001 7.34096 6.50001C6.86638 6.50001 6.48042 6.05149 6.48042 5.50001ZM3.46856 5.50001C3.46856 4.94851 3.8545 4.50001 4.3291 4.50001C4.80369 4.50001 5.18963 4.94853 5.18963 5.50001C5.18963 6.05151 4.80369 6.50001 4.3291 6.50001C3.8545 6.50001 3.46856 6.05149 3.46856 5.50001Z" fill="#999999"/>
+                                                    </svg>
                                                 <span>Değerlendirmelerim</span>
                                             </a>
                                         </li>
@@ -77,7 +79,7 @@
                                             <a href="">
                                                 <svg width="14" height="11" viewBox="0 0 14 11" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M10.8057 0.629993C10.6013 0.236243 10.1947 0 9.71927 0H2.24553C1.49794 0 0.886963 0.707483 0.886963 1.5725V9.42875C0.886963 10.2937 1.49794 11 2.24553 11H9.71927C10.1947 11 10.6013 10.765 10.8057 10.3725L13.795 5.5L10.8057 0.630017V0.629993Z" fill="#999999"/>
-                                                    </svg>
+                                                </svg>
                                                 <span>İndirim Kuponlarım</span>
                                             </a>
                                         </li>
@@ -101,7 +103,7 @@
                                             <a href="">
                                                 <svg width="14" height="15" viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M7.34097 0C10.8907 0 13.795 3.375 13.795 7.5C13.795 11.625 10.8907 15 7.34097 15C3.79127 15 0.886963 11.625 0.886963 7.5C0.886963 3.375 3.79127 0 7.34097 0ZM7.42703 10.3588C7.19789 10.3588 7.00752 10.45 6.85692 10.6338C6.70632 10.8175 6.63101 11.05 6.63101 11.3338C6.63101 11.6175 6.70629 11.85 6.85692 12.0338C7.00754 12.2175 7.19789 12.3088 7.42703 12.3088C7.65616 12.3088 7.84868 12.2175 8.0025 12.0338C8.15632 11.85 8.23377 11.6175 8.23377 11.3338C8.23377 11.05 8.15632 10.8175 8.0025 10.6338C7.84868 10.45 7.65613 10.3588 7.42703 10.3588ZM7.56686 3.63373C7.15811 3.63373 6.79024 3.73623 6.46432 3.93999C6.20294 4.10249 5.97059 4.30249 5.76728 4.5375L5.61992 4.72125L6.30835 5.45873C6.46647 5.25874 6.63427 5.09998 6.81393 4.98374C6.99359 4.8675 7.19363 4.80873 7.41631 4.80873C7.68846 4.80873 7.90251 4.9 8.05633 5.08373C8.21016 5.26746 8.2876 5.50875 8.2876 5.80871C8.2876 5.99997 8.24779 6.17997 8.16927 6.34622C8.09075 6.51246 7.99178 6.68123 7.87344 6.85246C7.75511 7.0237 7.62926 7.19871 7.49696 7.37746C7.36466 7.55621 7.24633 7.74996 7.142 7.95871C7.03766 8.16744 6.95913 8.39621 6.90536 8.64621C6.86558 8.83371 6.84942 9.03496 6.86018 9.25121L6.87847 9.4712H7.96489C7.93585 9.20493 7.9563 8.96245 8.02405 8.74619C8.0918 8.52992 8.18217 8.32494 8.29296 8.13369C8.40376 7.94243 8.52961 7.75868 8.66945 7.58368C8.80928 7.40867 8.9405 7.22492 9.06207 7.03367C9.18362 6.84241 9.28581 6.63992 9.36863 6.42742C9.45145 6.21492 9.49231 5.97494 9.49231 5.70867C9.49231 5.36742 9.4439 5.06742 9.34708 4.80866C9.25026 4.54989 9.11795 4.33366 8.94908 4.15865C8.78021 3.98365 8.57798 3.8524 8.34132 3.76491C8.10468 3.67739 7.84652 3.63366 7.56685 3.63366L7.56686 3.63373Z" fill="#999999"/>
-                                                    </svg>
+                                                </svg>
                                                 <span>Yardım</span>
                                             </a>
                                         </li>
@@ -109,7 +111,7 @@
                                             <a href="">
                                                 <svg width="14" height="15" viewBox="0 0 14 15" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M8.95446 8.12496C8.65705 8.12496 8.41666 8.40499 8.41666 8.74992V11.25C8.41666 11.5944 8.17568 11.875 7.87876 11.875H6.26526V2.49996C6.26526 1.96622 5.97268 1.48934 5.53277 1.31184L5.37353 1.24992H7.87876C8.17568 1.24992 8.41666 1.53053 8.41666 1.875V3.75C8.41666 4.09493 8.65705 4.37496 8.95446 4.37496C9.25188 4.37496 9.49226 4.09493 9.49226 3.75V1.875C9.49226 0.84126 8.76833 0 7.87876 0H2.09709C2.0766 0 2.05947 0.0106494 2.03958 0.0137256C2.01368 0.0112061 1.98896 0 1.96266 0C1.36941 0 0.886963 0.560537 0.886963 1.24992V12.4999C0.886963 13.0337 1.17955 13.5105 1.61945 13.688L4.8562 14.9419C4.9659 14.9812 5.07502 15 5.18965 15C5.78289 15 6.26525 14.4394 6.26525 13.75V13.125H7.87875C8.76832 13.125 9.49225 12.2837 9.49225 11.25V8.74992C9.49225 8.40499 9.25186 8.12496 8.95445 8.12496H8.95446ZM13.6374 5.80811L11.486 3.30814C11.3323 3.12939 11.1009 3.0756 10.8998 3.17241C10.6992 3.26934 10.568 3.49742 10.568 3.75V5.625H8.41666C8.11974 5.625 7.87876 5.90492 7.87876 6.24996C7.87876 6.59501 8.11974 6.87492 8.41666 6.87492H10.568V8.74992C10.568 9.00249 10.6992 9.23058 10.8998 9.32751C11.1009 9.42432 11.3323 9.37055 11.486 9.19189L13.6374 6.69182C13.8477 6.44748 13.8477 6.05244 13.6374 5.80811Z" fill="#999999"/>
-                                                    </svg>
+                                                </svg>
                                                 <span>Çıkış Yap</span>
                                             </a>
                                         </li>
@@ -168,7 +170,140 @@
                 <li>
                     <a href="">EV & YAŞAM</a>
                     <div class="category-content">
-                        <div class="campaign-container">
+                        <div class="category-column">
+                            <div class="sub-category">
+                                <a href="">Sofra & Mutfak</a>
+                                <ul>
+                                    <li><a href="">Yemek Takımı</a></li>
+                                    <li><a href="">Çatal Kaşık Bıçak Seti</a></li>
+                                    <li><a href="">Baharat Takımı</a></li>
+                                    <li><a href="">Fincan & Kupa</a></li>
+                                    <li><a href="">Fırın & Kek Kalıbı</a></li>
+                                    <li><a href="">Çaydanlık</a></li>
+                                    <li><a href="">Tencere Seti</a></li>
+                                </ul>
+                            </div>
+                            <div class="sub-category">
+                                <a href="">Banyo</a>
+                                <ul>
+                                    <li><a href="">Havlu & Havlu Seti</a></li>
+                                    <li><a href="">Bornoz</a></li>
+                                    <li><a href="">Banyo Seti</a></li>
+                                    <li><a href="">Banyo Paspası</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="category-column">
+                            <div class="sub-category">
+                                <a href="">Ev Tekstili</a>
+                                <ul>
+                                    <li><a href="">Yatak Odası</a></li>
+                                    <li><a href="">Halı & Kilim & Paspas</a></li>
+                                    <li><a href="">Perde</a></li>
+                                    <li><a href="">Nevresim Takımı</a></li>
+                                    <li><a href="">Yastık</a></li>
+                                    <li><a href="">Kırlent ve Kılıfı</a></li>
+                                </ul>
+                            </div>
+                            <div class="sub-category">
+                                <a href="">Ev Dekorasyonu</a>
+                                <ul>
+                                    <li><a href="">Dekoratif Ürünler</a></li>
+                                    <li><a href="">Tablo</a></li>
+                                    <li><a href="">Duvar Saati</a></li>
+                                    <li><a href="">Ayna</a></li>
+                                    <li><a href="">Sanat</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="category-column">
+                            <div class="sub-category">
+                                <a href="">Aydınlatma</a>
+                                <ul>
+                                    <li><a href="">Avize</a></li>
+                                    <li><a href="">Lambader</a></li>
+                                    <li><a href="">Abajur</a></li>
+                                </ul>
+                            </div>
+                            <div class="sub-category">
+                                <a href="">Mobilya</a>
+                                <ul>
+                                    <li><a href="">Salon & Oturma Odası</a></li>
+                                    <li><a href="">Yatak Odası</a></li>
+                                    <li><a href="">Çalışma Odası</a></li>
+                                </ul>
+                            </div>
+                            <div class="sub-category">
+                                <a href="">Ev Gereçleri</a>
+                                <ul>
+                                    <li><a href="">Düzenleyici</a></li>
+                                    <li><a href="">Çamaşırlık</a></li>
+                                    <li><a href="">Temizlik Gereçleri</a></li>
+                                    <li><a href="">Sepet & Hurç</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="category-column">
+                            <div class="sub-category">
+                                <a href="">Hobi</a>
+                                <ul>
+                                    <li><a href="">Kitap</a></li>
+                                    <li><a href="">Puzzle</a></li>
+                                    <li><a href="">Boya & Resim</a></li>
+                                    <li><a href="">Kutu Oyunları</a></li>
+                                </ul>
+                            </div>
+                            <div class="sub-category">
+                                <a href="">Kırtasiye & Ofis</a>
+                                <ul>
+                                    <li><a href="">Defter</a></li>
+                                    <li><a href="">Kalem</a></li>
+                                </ul>
+                            </div>
+                            <div class="sub-category">
+                                <a href="">Spor & Outdoor</a>
+                                <ul>
+                                    <li><a href="">Koşu Bandı</a></li>
+                                    <li><a href="">Dumbell & Ağırlık</a></li>
+                                    <li><a href="">Pilates & Yoga</a></li>
+                                    <li><a href="">Eliptik Bisiklet</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="category-column">
+                            <div class="sub-category">
+                                <a href="">Otomobil & Motorsiklet</a>
+                                <ul>
+                                    <li><a href="">Oto Aksesuar</a></li>
+                                    <li><a href="">Oto Paspası</a></li>
+                                    <li><a href="">Oto Lastik</a></li>
+                                    <li><a href="">Kask</a></li>
+                                </ul>
+                            </div>
+                            <div class="sub-category">
+                                <a href="">Yapı Market</a>
+                                <ul>
+                                    <li><a href="">Banyo Yapı Malzemeleri</a></li>
+                                    <li><a href="">Eletkrikli Ev Aletleri</a></li>
+                                    <li><a href="">Hırdavat Ürünleri</a></li>
+                                    <li><a href="">Boya</a></li>
+                                    <li><a href="">Matkap</a></li>
+                                    <li><a href="">Ampul</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                        <div class="category-column">
+                            <div class="campaign-container">
+                                <a href="">
+                                    <img src="https://cdn.dsmcdn.com/mnresize/500/247/ty136/campaign/banners/original/573432/236a19b488_12_detay.jpg" alt="">
+                                </a>
+                                <a href="">
+                                    <img src="https://cdn.dsmcdn.com/mnresize/500/247/ty138/campaign/banners/original/573263/9908c64799_12_detay.jpg" alt="">
+                                </a>
+                            </div>
+                        </div>
+            
+                        <!-- <div class="campaign-container">
                             <a href="">
                                 <img src="https://cdn.dsmcdn.com/mnresize/500/247/ty136/campaign/banners/original/573432/236a19b488_12_detay.jpg" alt="">
                             </a>
@@ -287,7 +422,7 @@
                                 <li><a href="">Pilates & Yoga</a></li>
                                 <li><a href="">Eliptik Bisiklet</a></li>
                             </ul>
-                        </div>                       
+                        </div> -->                       
                     </div>
                 </li>
                 <li>
