--- a/index.html
+++ b/index.html
@@ -15,9 +15,11 @@
 
 <body>
     <div class="header">
-        <div class="header-banner">
-            <img src="assets/images/header-banner.gif" alt="">
-        </div>
+        <a href="" class="header-banner-container">
+            <div class="header-banner">
+                <img src="assets/images/header-banner.gif" alt="">
+            </div>
+        </a>
         <div class="container">
             <div class="header-main">
                 <div class="header-main-links">
