Story section is added

--- a/index.html
+++ b/index.html
@@ -303,128 +303,7 @@
                                     <img src="https://cdn.dsmcdn.com/mnresize/500/247/ty138/campaign/banners/original/573263/9908c64799_12_detay.jpg" alt="">
                                 </a>
                             </div>
-                        </div>
-            
-                        <!-- <div class="campaign-container">
-                            <a href="">
-                                <img src="https://cdn.dsmcdn.com/mnresize/500/247/ty136/campaign/banners/original/573432/236a19b488_12_detay.jpg" alt="">
-                            </a>
-                            <a href="">
-                                <img src="https://cdn.dsmcdn.com/mnresize/500/247/ty138/campaign/banners/original/573263/9908c64799_12_detay.jpg" alt="">
-                            </a>
-                        </div>
-                        <div class="sub-category">
-                            <a href="">Sofra & Mutfak</a>
-                            <ul>
-                                <li><a href="">Yemek Takımı</a></li>
-                                <li><a href="">Çatal Kaşık Bıçak Seti</a></li>
-                                <li><a href="">Baharat Takımı</a></li>
-                                <li><a href="">Fincan & Kupa</a></li>
-                                <li><a href="">Fırın & Kek Kalıbı</a></li>
-                                <li><a href="">Çaydanlık</a></li>
-                                <li><a href="">Tencere Seti</a></li>
-                            </ul>
-                        </div>
-                        <div class="sub-category">
-                            <a href="">Ev Tekstili</a>
-                            <ul>
-                                <li><a href="">Yatak Odası</a></li>
-                                <li><a href="">Halı & Kilim & Paspas</a></li>
-                                <li><a href="">Perde</a></li>
-                                <li><a href="">Nevresim Takımı</a></li>
-                                <li><a href="">Yastık</a></li>
-                                <li><a href="">Kırlent ve Kılıfı</a></li>
-                            </ul>
-                        </div>
-                        <div class="sub-category">
-                            <a href="">Aydınlatma</a>
-                            <ul>
-                                <li><a href="">Avize</a></li>
-                                <li><a href="">Lambader</a></li>
-                                <li><a href="">Abajur</a></li>
-                            </ul>
-                        </div>
-                        <div class="sub-category">
-                            <a href="">Hobi</a>
-                            <ul>
-                                <li><a href="">Kitap</a></li>
-                                <li><a href="">Puzzle</a></li>
-                                <li><a href="">Boya & Resim</a></li>
-                                <li><a href="">Kutu Oyunları</a></li>
-                            </ul>
-                        </div>
-                        <div class="sub-category">
-                            <a href="">Otomobil & Motorsiklet</a>
-                            <ul>
-                                <li><a href="">Oto Aksesuar</a></li>
-                                <li><a href="">Oto Paspası</a></li>
-                                <li><a href="">Oto Lastik</a></li>
-                                <li><a href="">Kask</a></li>
-                            </ul>
-                        </div>
-                        <div class="sub-category">
-                            <a href="">Mobilya</a>
-                            <ul>
-                                <li><a href="">Salon & Oturma Odası</a></li>
-                                <li><a href="">Yatak Odası</a></li>
-                                <li><a href="">Çalışma Odası</a></li>
-                            </ul>
-                        </div>
-                        <div class="sub-category">
-                            <a href="">Kırtasiye & Ofis</a>
-                            <ul>
-                                <li><a href="">Defter</a></li>
-                                <li><a href="">Kalem</a></li>
-                            </ul>
-                        </div>
-                        <div class="sub-category">
-                            <a href="">Yapı Market</a>
-                            <ul>
-                                <li><a href="">Banyo Yapı Malzemeleri</a></li>
-                                <li><a href="">Eletkrikli Ev Aletleri</a></li>
-                                <li><a href="">Hırdavat Ürünleri</a></li>
-                                <li><a href="">Boya</a></li>
-                                <li><a href="">Matkap</a></li>
-                                <li><a href="">Ampul</a></li>
-                            </ul>
-                        </div>
-                        <div class="sub-category">
-                            <a href="">Banyo</a>
-                            <ul>
-                                <li><a href="">Havlu & Havlu Seti</a></li>
-                                <li><a href="">Bornoz</a></li>
-                                <li><a href="">Banyo Seti</a></li>
-                                <li><a href="">Banyo Paspası</a></li>
-                            </ul>
-                        </div>
-                        <div class="sub-category">
-                            <a href="">Ev Dekorasyonu</a>
-                            <ul>
-                                <li><a href="">Dekoratif Ürünler</a></li>
-                                <li><a href="">Tablo</a></li>
-                                <li><a href="">Duvar Saati</a></li>
-                                <li><a href="">Ayna</a></li>
-                                <li><a href="">Sanat</a></li>
-                            </ul>
-                        </div>
-                        <div class="sub-category">
-                            <a href="">Ev Gereçleri</a>
-                            <ul>
-                                <li><a href="">Düzenleyici</a></li>
-                                <li><a href="">Çamaşırlık</a></li>
-                                <li><a href="">Temizlik Gereçleri</a></li>
-                                <li><a href="">Sepet & Hurç</a></li>
-                            </ul>
-                        </div>
-                        <div class="sub-category">
-                            <a href="">Spor & Outdoor</a>
-                            <ul>
-                                <li><a href="">Koşu Bandı</a></li>
-                                <li><a href="">Dumbell & Ağırlık</a></li>
-                                <li><a href="">Pilates & Yoga</a></li>
-                                <li><a href="">Eliptik Bisiklet</a></li>
-                            </ul>
-                        </div> -->                       
+                        </div>                    
                     </div>
                 </li>
                 <li>
@@ -462,6 +341,78 @@
         </div>
     </div>
 
+    <!-- STORY SECTION BEGIN -->
+
+    <div class="container">
+        <div class="stories">
+            <div class="story">
+                <a href="">
+                    <img src="https://cdn.dsmcdn.com/marketing/datascience/automation/2021/6/28/FirsatURuNleri200X2001_202106281336.png" alt="" class="story-img">
+                    <span class="story-text">Tüm Ürünler</span>
+                </a>
+            </div>
+            <div class="story">
+                <a href="">
+                    <img src="https://cdn.dsmcdn.com/marketing/datascience/automation/2021/6/28/SecIliURuNler200X2001_202106281336.png" alt="" class="story-img">
+                    <span class="story-text">Kaçırma!</span>
+                </a>
+            </div>
+            <div class="story">
+                <a href="">
+                    <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/4/25/20210425_15551619355300_SanaOzel.png" alt="" class="story-img">
+                    <span class="story-text">Sana Özel</span>
+                </a>
+            </div>
+            <div class="story">
+                <a href="">
+                    <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/4/25/20210425_15551619355311_SenDeAl.png" alt="" class="story-img">
+                    <span class="story-text">Sen de Al!</span>
+                </a>
+            </div>
+            <div class="story">
+                <a href="">
+                    <img src="https://cdn.dsmcdn.com/marketing/datascience/automation/2020/12/30/EglenceWeb_202012301831.png" alt="" class="story-img">
+                    <span class="story-text">Kodlar & Hizmetler</span>
+                </a>
+            </div>
+            <div class="story">
+                <a href="">
+                    <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/4/25/20210425_15521619355152_Mango.png" alt="" class="story-img">
+                    <span class="story-text">Mango</span>
+                </a>
+            </div>
+            <div class="story">
+                <a href="">
+                    <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/4/25/20210425_15521619355157_Mavi.png" alt="" class="story-img">
+                    <span class="story-text">Mavi</span>
+                </a>
+            </div>
+            <div class="story">
+                <a href="">
+                    <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/5/24/20210524_17061621865162_Pullbear.png" alt="" class="story-img">
+                    <span class="story-text">Pull & Bear</span>
+                </a>
+            </div>
+            <div class="story">
+                <a href="">
+                    <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/4/25/20210425_15541619355245_Penti.png" alt="" class="story-img">
+                    <span class="story-text">Penti</span>
+                </a>
+            </div>
+            <div class="story">
+                <a href="">
+                    <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/4/25/20210425_15511619355115_Koton.png" alt="" class="story-img">
+                    <span class="story-text">Koton</span>
+                </a>
+            </div>
+            <div class="story">
+                <a href="">
+                    <img src="https://cdn.dsmcdn.com/marketing/datascience/Automation/BrandBoutique/2021/4/25/20210425_15471619354848_Avva.png" alt="" class="story-img">
+                    <span class="story-text">Avva</span>
+                </a>
+            </div>
+        </div>
+    </div>
 
 </body>
 
