--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="header">
         <a href="" class="header-banner-container">
             <div class="header-banner">
-                <img src="assets/images/header-banner.gif" alt="">
+                <img src="https://cdn.dsmcdn.com/mrktng/crm/topBnr/jun/27/ozel-firsatlar-m.gif" alt="">
             </div>
         </a>
         <div class="container">
@@ -414,6 +414,120 @@
         </div>
     </div>
 
+<!-- COMPONENT BANNER SECTION STARTS -->
+
+    <div class="container">
+        <div class="component-banner-container">
+            <div class="components">
+                <div class="component">
+                    <a href="" class="component-link">
+                        <img src="https://cdn.dsmcdn.com/marketing/datascience/automation/2021/6/28/WebBanner_202106281352.gif" alt="" class="component-img">
+                        <div class="component-description">
+                            <span class="component-text">
+                                Flaş Ürünler
+                            </span>
+                            <span class="hover-text">
+                                Alışverişe Başla
+                                <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4.89284 5.97711L1.1733 1.85313C0.997273 1.65796 0.997273 1.34154 1.1733 1.14637C1.34932 0.951209 1.63472 0.951209 1.81075 1.14637L5.84377 5.61789C5.87996 5.65801 5.9087 5.70328 5.93001 5.75155C6.0349 5.9126 6.02196 6.13875 5.89119 6.28373L1.7463 10.8793C1.60117 11.0402 1.36591 11.0402 1.22078 10.8793L1.10885 10.7553C0.963718 10.5944 0.963718 10.3335 1.10885 10.1726L4.89284 5.97711Z" fill="white" stroke="white" stroke-width="0.3"/>
+                                    </svg>
+                            </span>
+                        </div>
+                    </a>
+                </div>
+                <div class="component">
+                    <a href="" class="component-link">
+                        <img src="https://cdn.dsmcdn.com/ty139/campaign/banners/original/572758/03c9a9dde2_2_new.jpg" alt="" class="component-img">
+                        <div class="component-description">
+                            <span class="component-text">
+                                TRENDYOLMİLLA&TRENDYOL MAN&TRENDYOL MODEST - Yeni Sezonda Fırsatlar
+                            </span>
+                            <span class="hover-text">
+                                Alışverişe Başla
+                                <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4.89284 5.97711L1.1733 1.85313C0.997273 1.65796 0.997273 1.34154 1.1733 1.14637C1.34932 0.951209 1.63472 0.951209 1.81075 1.14637L5.84377 5.61789C5.87996 5.65801 5.9087 5.70328 5.93001 5.75155C6.0349 5.9126 6.02196 6.13875 5.89119 6.28373L1.7463 10.8793C1.60117 11.0402 1.36591 11.0402 1.22078 10.8793L1.10885 10.7553C0.963718 10.5944 0.963718 10.3335 1.10885 10.1726L4.89284 5.97711Z" fill="white" stroke="white" stroke-width="0.3"/>
+                                    </svg>
+                            </span>
+                        </div>
+                    </a>
+                </div>
+                <div class="component">
+                    <a href="" class="component-link">
+                        <img src="https://cdn.dsmcdn.com/marketing/datascience/automation/BrandBoutique/2021/6/29/1510CilginFiyatlar_section1_202106291230_webBig.jpg" alt="" class="component-img">
+                        <div class="component-description">
+                            <span class="component-text">
+                                1-5-10 Çılgın Fiyatlar
+                            </span>
+                            <span class="hover-text">
+                                Alışverişe Başla
+                                <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4.89284 5.97711L1.1733 1.85313C0.997273 1.65796 0.997273 1.34154 1.1733 1.14637C1.34932 0.951209 1.63472 0.951209 1.81075 1.14637L5.84377 5.61789C5.87996 5.65801 5.9087 5.70328 5.93001 5.75155C6.0349 5.9126 6.02196 6.13875 5.89119 6.28373L1.7463 10.8793C1.60117 11.0402 1.36591 11.0402 1.22078 10.8793L1.10885 10.7553C0.963718 10.5944 0.963718 10.3335 1.10885 10.1726L4.89284 5.97711Z" fill="white" stroke="white" stroke-width="0.3"/>
+                                    </svg>
+                            </span>
+                        </div>
+                    </a>
+                </div>
+                <div class="component">
+                    <a href="" class="component-link">
+                        <img src="https://cdn.dsmcdn.com/ty135/campaign/banners/original/573408/1d8a1ff34c_0_new.jpg" alt="" class="component-img">
+                        <div class="component-description">
+                            <span class="component-text">
+                                TRENDYOLMİLLA&TRENDYOL MAN&TRENDYOL MODEST - Yeni Sezon
+                            </span>
+                            <span class="hover-text">
+                                Alışverişe Başla
+                                <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4.89284 5.97711L1.1733 1.85313C0.997273 1.65796 0.997273 1.34154 1.1733 1.14637C1.34932 0.951209 1.63472 0.951209 1.81075 1.14637L5.84377 5.61789C5.87996 5.65801 5.9087 5.70328 5.93001 5.75155C6.0349 5.9126 6.02196 6.13875 5.89119 6.28373L1.7463 10.8793C1.60117 11.0402 1.36591 11.0402 1.22078 10.8793L1.10885 10.7553C0.963718 10.5944 0.963718 10.3335 1.10885 10.1726L4.89284 5.97711Z" fill="white" stroke="white" stroke-width="0.3"/>
+                                    </svg>
+                            </span>
+                        </div>
+                    </a>
+                </div>
+                <div class="component">
+                    <a href="" class="component-link">
+                        <img src="https://cdn.dsmcdn.com/ty139/pimWidgetApi/webBig_20210630123543_enbegenilenler300621web.jpg" alt="" class="component-img">
+                        <div class="component-description">
+                            <span class="component-text">
+                                En Beğenilenler Kadın & Çocuk Giyim
+                            </span>
+                            <span class="hover-text">
+                                Alışverişe Başla
+                                <svg width="7" height="12" viewBox="0 0 7 12" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd" clip-rule="evenodd" d="M4.89284 5.97711L1.1733 1.85313C0.997273 1.65796 0.997273 1.34154 1.1733 1.14637C1.34932 0.951209 1.63472 0.951209 1.81075 1.14637L5.84377 5.61789C5.87996 5.65801 5.9087 5.70328 5.93001 5.75155C6.0349 5.9126 6.02196 6.13875 5.89119 6.28373L1.7463 10.8793C1.60117 11.0402 1.36591 11.0402 1.22078 10.8793L1.10885 10.7553C0.963718 10.5944 0.963718 10.3335 1.10885 10.1726L4.89284 5.97711Z" fill="white" stroke="white" stroke-width="0.3"/>
+                                    </svg>
+                            </span>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            
+            <div class="banners">
+                <div class="banner">
+                    <a href="">
+                        <img class="banner-img" src="https://cdn.dsmcdn.com//mrktng/crm/rightBnr/jun/28/imgs/yaz.png" alt="">
+                    </a>
+                </div>
+                <div class="banner">
+                    <a href="">
+                        <img class="banner-img" src="https://cdn.dsmcdn.com//mrktng/crm/rightBnr/jun/28/imgs/yaz.png" alt="">
+                    </a>
+                </div>
+                <div class="banner">
+                    <a href="">
+                        <img class="banner-img" src="https://cdn.dsmcdn.com//mrktng/crm/rightBnr/jun/28/imgs/yaz.png" alt="">
+                    </a>
+                </div>
+                <div class="banner">
+                    <a href="">
+                        <img class="banner-img" src="https://cdn.dsmcdn.com//mrktng/crm/rightBnr/jun/28/imgs/yaz.png" alt="">
+                    </a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+<!-- COMPONENT BANNER SECTION STARTS -->
+    
 </body>
 
 </html>
