Add blackout in category hover

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
     <meta charset="UTF-8">
@@ -171,6 +171,7 @@
                 </li>
                 <li>
                     <a href="">EV & YAŞAM</a>
+                    <div class="black-out"></div>
                     <div class="category-content">
                         <div class="category-column">
                             <div class="sub-category">
