Add showing search history from input focus

--- a/index.html
+++ b/index.html
@@ -34,6 +34,16 @@
                         <form action="" method="post">
                             <input type="search" name="" class="search-box"
                                 placeholder="Aradığınız ürün, kategori veya markayı yazınız">
+                            <div class="search-history">
+                                <div class="search-history-top">
+                                    <span>Geçmiş Aramalar</span>
+                                    <a href="">Temizle</a>
+                                </div>
+                                <ul class="history-list">
+                                    <li class="history-item"><a href="">Robot Süpürge</a></li>
+                                    <li class="history-item"><a href="">iPhone 11</a></li>
+                                </ul>
+                            </div>
                             <button class="search-button">
                                 <img src="assets/icons/icon-search.svg" alt="">
                             </button>
