--- a/index.html
+++ b/index.html
@@ -14,50 +14,72 @@
 </head>
 
 <body>
-    <div class="header">
-        <a href="" class="header-banner-container">
-            <div class="header-banner">
+    <!-- Header - Start -->
+    <header class="page-header">
+        <!-- Header Banner - Start -->
+        <div class="header-banner">
+            <a href="">
                 <img src="https://cdn.dsmcdn.com/mrktng/crm/topBnr/jun/27/ozel-firsatlar-m.gif" alt="">
-            </div>
-        </a>
-        <div class="container">
-            <div class="header-main">
-                <div class="header-main-links">
+            </a>
+        </div>
+        <!-- Header Banner - End -->
+        <!-- Header Main - Start -->
+        <div class="header-main">
+            <div class="container">
+                <!-- Header Links - Start -->
+                <div class="header-links">
                     <a href="">Trendyol'da Satış Yap</a>
                     <a href="">Yardım & Destek</a>
                 </div>
-                <div class="header-main-content">
+                <!-- Header Links - End -->
+                <!-- Header Content - Start -->
+                <div class="header-content">
+                    <!-- Logo - Start -->
                     <a class="logo" href="">
                         <img src="assets/images/logo.svg" alt="">
                     </a>
-                    <div class="search-box-container">
+                    <!-- Logo - End -->
+                    <!-- Search Area - Start -->
+                    <div class="search-area">
                         <form action="" method="post">
                             <input type="search" name="" class="search-box"
                                 placeholder="Aradığınız ürün, kategori veya markayı yazınız">
+                            <!-- Search History - Start -->
                             <div class="search-history">
                                 <div class="search-history-top">
                                     <span>Geçmiş Aramalar</span>
                                     <a href="">Temizle</a>
                                 </div>
                                 <ul class="history-list">
-                                    <li class="history-item"><a href="">Robot Süpürge</a></li>
-                                    <li class="history-item"><a href="">iPhone 11</a></li>
+                                    <li class="history-item">
+                                        <a href="">Robot Süpürge</a>
+                                    </li>
+                                    <li class="history-item">
+                                        <a href="">iPhone 11</a>
+                                    </li>
                                 </ul>
                             </div>
+                            <!-- Search History - End -->
+                            <!-- Search Button - Start -->
                             <button class="search-button">
                                 <img src="assets/icons/icon-search.svg" alt="">
                             </button>
+                            <!-- Search Button - End -->
                         </form>
                     </div>
-                    <nav class="account-list">
+                    <!-- Search Area - End -->
+                    <!-- Account Navigation - Start -->
+                    <nav class="account-nav">
                         <ul>
-                            <li class="account-item profile">
+                            <!-- Account Nav Item - Start -->
+                            <li class="account-nav-item profile">
                                 <a href="" class="account-item-link">
                                     <svg width="18" height="16" viewBox="0 0 18 16" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <path d="M8.88581 8.89825C5.32286 8.89825 2.39386 11.4335 2.04184 14.683H15.7298C15.3778 11.4335 12.4488 8.89825 8.88581 8.89825ZM16.4684 16H1.30322C0.914888 16 0.600098 15.7052 0.600098 15.3415C0.600098 11.0552 4.30871 7.58117 8.88581 7.58117C13.4629 7.58117 17.1715 11.0552 17.1715 15.3415C17.1715 15.7052 16.8567 16 16.4684 16H16.4684ZM11.974 4.20942C11.974 2.61304 10.5903 1.31708 8.88583 1.31708C7.18136 1.31708 5.79766 2.61304 5.79766 4.20942C5.79766 5.80581 7.18136 7.10177 8.88583 7.10177C10.5903 7.10177 11.974 5.80581 11.974 4.20942ZM13.3802 4.20942C13.3802 6.53323 11.3669 8.41885 8.88581 8.41885C6.4047 8.41885 4.39139 6.53323 4.39139 4.20942C4.39139 1.88561 6.40467 0 8.88581 0C11.367 0 13.3802 1.88565 13.3802 4.20942Z" fill="black"/>
                                     </svg>
                                     <span>Hesabım</span>
                                 </a>
+                                <!-- Profile - Start -->
                                 <div class="profile-container">
                                     <ul class="profile-link">
                                         <li class="profile-link-item profile-name">
@@ -129,9 +151,12 @@
                                         </li>
                                     </ul>
                                 </div>
+                                <!-- Profile - End -->
                             </li>
-                            <li class="account-item">
-                                <a href="" class="account-item-link">
+                            <!-- Account Nav Item - End -->
+                            <!-- Account Nav Item - Start -->
+                            <li class="account-nav-item">
+                                <a href="">
                                     <svg width="21" height="16" viewBox="0 0 21 16" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
                                         <path
@@ -141,7 +166,9 @@
                                     <span>Favorilerim</span>
                                 </a>
                             </li>
-                            <li class="account-item">
+                            <!-- Account Nav Item - End -->
+                            <!-- Account Nav Item - Start -->
+                            <li class="account-nav-item">
                                 <a href="" class="account-item-link">
                                     <svg width="19" height="16" viewBox="0 0 19 16" fill="none"
                                         xmlns="http://www.w3.org/2000/svg">
@@ -152,12 +179,18 @@
                                     <span>Sepetim</span>
                                 </a>
                             </li>
+                            <!-- Account Nav Item - End -->
                         </ul>
                     </nav>
+                    <!-- Account Navigation - End -->
                 </div>
+                <!-- Header Content - End -->
             </div>
         </div>
-    </div>
+        <!-- Header Main - End -->
+    </header>
+    <!-- Header - End -->
+
     <div class="categories">
         <div class="container">
             <ul class="category-list">
@@ -538,7 +571,5 @@
     </div>
 
 <!-- COMPONENT BANNER SECTION STARTS -->
-    
 </body>
-
 </html>
